update code for java 21, Spring 3.3, and Junit 5